# cc2538-starter

./: Cargo.toml  Drone.toml  Justfile  Justfile.debug  README.md  flash-cca.ld
drone-cc2538-dso/: Cargo.toml  Justfile  README.md
drone-cc2538-dso/src/: gpio.rs  iocsel.rs  lib.rs  logger.rs  pads.rs  set_log.rs  sysctrl.rs  uart.rs
src/: bin.rs  lib.rs  thr.rs
src/drv/: mod.rs  sys.rs
src/periph/: mod.rs  sys.rs
src/tasks/: mod.rs  root.rs
