cargo-features = ["resolver"]

[package]
name = "cc2538-starter"
version = "0.13.0"
authors = ["alfredch <alfred.keller@centosa.ch>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cc2538-starter"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-tisl-map/std",
    "drone-cc2538-dso/std",
    "futures/std",
]
heaptrace = ["drone-core/heaptrace"]

[dependencies]
drone-core = { version = "0.13.0", path = "../drone-core/" }
drone-cortexm = { version = "0.13.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"], path = "../drone-cortexm" }
drone-tisl-map = { version = "0.13.0", features = ["uart", "ioc", "sysctrl", "gpio"], path = "../drone-tisl-map" }
drone-cc2538-dso = { version = "0.13.0", path = "./drone-cc2538-dso" }
futures = { version = "0.3.0", default-features = false }
typenum = "1.12"

[profile.release]
lto = true
debug = true
panic = "abort"
