cargo-features = ["resolver"]

[package]
name = "drone-cc2538-dso"
version = "0.13.0"
authors = ["Drone-OS maintainers <alfred.keller@centosa.ch>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-cc2538-dso"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-cc2538-dso/0.12/drone_cc2538_dso/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Texas Instruments CC2538 DSO implementation for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["drone-core/std", "drone-cortexm/std", "drone-tisl-map/std"]

[dependencies]
drone-core = { version = "0.13.0", path = "../../drone-core" }
drone-cortexm = { version = "0.13.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"], path = "../../drone-cortexm/" }
drone-tisl-map = { version = "0.13.0", features = ["uart", "ioc", "sysctrl", "gpio"], path = "../../drone-tisl-map" }
futures = { version = "0.3.0", default-features = false }
typenum = "1.12"

